--- a/METS_v2_Docs/docHtml.css
+++ b/METS_v2_Docs/docHtml.css
@@ -427,7 +427,7 @@ table.rt_with_bg{
 
 
 /* -------------------------------------- 
-    Controls for bulk showing/hidding sections 
+    Controls for bulk showing/hiding sections
     from the documentation.
 ----------------------------------------*/
 
